@@ -2,6 +2,9 @@
 - Changed the filenames of response record files so they sort by time in
   a directory listing. This may cause extra responses after upgrading.
 
+- Added support for putting the original sender (%s) and recipient (%r)
+  in the response message.
+
 - Added support for single file config mode, including the response.
 
 - Fixed handling of MySQL default timestamp value.
